Curvas BER BCH.

--- a/examples/OOT/BER Teórico.ipynb
+++ b/examples/OOT/BER Teórico.ipynb
@@ -257,8 +257,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## <font color = red> Problema com simulação do diferencial? Por que para os BCHs que corrigem mais de 1 erro o código não está desempenhando bem?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## <font color = Yellow> Provavelmentem a fórmula do Hard Decision Blocks Não Serve para Diff Encoding -> Assume que os erros de bits são aleatórios e não podendo estar juntos"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -276,7 +290,7 @@
        "0.1803196464988525"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -287,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -296,7 +310,7 @@
        "0.16699912791099902"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -338,6 +352,15 @@
    "cell_type": "code",
    "execution_count": 20,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Diff Encoding Hamming"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -345,7 +368,7 @@
        "0.2444228250723225"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -353,6 +376,80 @@
    "source": [
     "Pb_DBPSK(from_dB(0 - 10 * math.log10(7/4)))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.2762370008136536"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Pb_Hard_Codes(Pb_DBPSK(from_dB(0 - 10 * math.log10(7/4))), 7, 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7.744186444600035e-06"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Pb_DBPSK(from_dB(10 - 0))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.6900642987643003e-06"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Pb_Hard_Codes(Pb_DBPSK(from_dB(10 - 10 * math.log10(15/7))), 15, 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
