Site Relação Source Amplitude EbN0.

--- a/examples/OOT/BER Teórico.ipynb
+++ b/examples/OOT/BER Teórico.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "https://www.gaussianwaves.com/2010/04/ber-vs-ebn0-for-bpsk-modulation-over-awgn-2/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "https://www.mathworks.com/help/comm/ug/bit-error-rate-ber.html\n",
     "\n",
     "# <font color = blue> <b> Ver referência indicada na página para os cálculos"
