--- a/examples/BPSK Ladams/16-05-2019 (A Fazer)/BCH Recoder.ipynb
+++ b/examples/BPSK Ladams/16-05-2019 (A Fazer)/BCH Recoder.ipynb
@@ -41,46 +41,6 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "with open(\"output2.data\", \"rb\")as f:\n",
-    "    _ = f.read()\n",
-    "rcv = np.frombuffer(_, dtype = np.uint8)\n",
-    "\n",
-    "\n",
-    "#preamble = np.unpackbits(preamble)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "len(rcv)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import BCH_Recoder\n",
-    "reload(BCH_Recoder)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": []
   },
   {
@@ -100,7 +60,7 @@
     "\n",
     "    time.sleep(10)\n",
     "\n",
-    "    inputdata= \" \"\n",
+    "    inputdata= b\" \"\n",
     "    stdoutdata,stderrdata=process.communicate(input=inputdata)\n",
     "    \n",
     "    img = readOutput(\"output2.data\", np.array([67 + 0, 255], dtype = np.uint8), header, (256, 256))\n",
@@ -160,21 +120,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.15rc1"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
