Cotas para BER Curve BCH(15, 7, t = 2).

--- a/examples/OOT/BER Teórico.ipynb
+++ b/examples/OOT/BER Teórico.ipynb
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -297,7 +297,7 @@
        "0.1803196464988525"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -317,7 +317,7 @@
        "0.16699912791099902"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -450,6 +450,86 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def Cota_High_Hamming(Ps):\n",
+    "    return (1 - ((1-Ps)**7 + 7 * (1 - Ps)**6 * Ps))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def Cota_High(p, N, t):\n",
+    "    Sum = 0\n",
+    "    for m in range(0, t + 1):\n",
+    "        print(comb(N, m, exact = True, repetition = False))\n",
+    "        x = comb(N, m, exact = True, repetition = False) * p ** (m) * (1 - p) ** (N - m)\n",
+    "        Sum += x\n",
+    "    return 1 - Sum"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.002031041634940056"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Cota_High_Hamming(0.01)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "7\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.002031041634940056"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Cota_High(0.01, 7, 1)"
+   ]
   },
   {
    "cell_type": "code",
