Update notebook teórico.

--- a/examples/OOT/BER Teórico.ipynb
+++ b/examples/OOT/BER Teórico.ipynb
@@ -11,6 +11,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## <font color = green> Para Blocos de Noise \n",
+    "SNR = 10*Log(Signal Power / Noise Power) , or\n",
+    "\n",
+    "SNR = 20*Log(Signal Voltage, rms / Noise Voltage, rms)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "####"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "https://www.mathworks.com/help/comm/ug/bit-error-rate-ber.html\n",
     "\n",
     "# <font color = blue> <b> Ver referência indicada na página para os cálculos"
@@ -36,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -65,7 +84,7 @@
        "0.5"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -76,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +144,7 @@
        "0.07864960352514258"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -143,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +171,7 @@
        "0.1449276867809609"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -175,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -214,7 +233,7 @@
        "0.14252470370130643"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -225,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -234,7 +253,7 @@
        "0.04476969335076263"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -245,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -254,7 +273,7 @@
        "0.12338513190559505"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -279,31 +298,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "### Para BCH (15, 7, 2) - Valores com cerca de 1% de erro."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.1803196464988525"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "Pb_Hard_Codes(Pb_BPSK(from_dB(0 - 10 * math.log10(15/7))), 15, 2)"
    ]
   },
   {
@@ -314,10 +313,30 @@
     {
      "data": {
       "text/plain": [
-       "0.16699912791099902"
+       "0.1803196464988525"
       ]
      },
      "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Pb_Hard_Codes(Pb_BPSK(from_dB(0 - 10 * math.log10(15/7))), 15, 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.16699912791099902"
+      ]
+     },
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -328,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -337,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -346,7 +365,7 @@
        "0.1449276867809609"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -357,31 +376,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "## Diff Encoding Hamming"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.2444228250723225"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "Pb_DBPSK(from_dB(0 - 10 * math.log10(7/4)))"
    ]
   },
   {
@@ -392,7 +391,7 @@
     {
      "data": {
       "text/plain": [
-       "0.2762370008136536"
+       "0.2444228250723225"
       ]
      },
      "execution_count": 22,
@@ -401,7 +400,7 @@
     }
    ],
    "source": [
-    "Pb_Hard_Codes(Pb_DBPSK(from_dB(0 - 10 * math.log10(7/4))), 7, 1)"
+    "Pb_DBPSK(from_dB(0 - 10 * math.log10(7/4)))"
    ]
   },
   {
@@ -412,7 +411,7 @@
     {
      "data": {
       "text/plain": [
-       "7.744186444600035e-06"
+       "0.2762370008136536"
       ]
      },
      "execution_count": 23,
@@ -421,7 +420,7 @@
     }
    ],
    "source": [
-    "Pb_DBPSK(from_dB(10 - 0))"
+    "Pb_Hard_Codes(Pb_DBPSK(from_dB(0 - 10 * math.log10(7/4))), 7, 1)"
    ]
   },
   {
@@ -432,10 +431,30 @@
     {
      "data": {
       "text/plain": [
-       "1.6900642987643003e-06"
+       "7.744186444600035e-06"
       ]
      },
      "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Pb_DBPSK(from_dB(10 - 0))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.6900642987643003e-06"
+      ]
+     },
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -460,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -470,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -485,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -494,7 +513,7 @@
        "0.002031041634940056"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -505,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -522,7 +541,7 @@
        "0.002031041634940056"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
