Read Me Images.

--- a/examples/BPSK Ladams/23-05-2019 (SNR Estimators)/SNR Estimators.ipynb
+++ b/examples/BPSK Ladams/23-05-2019 (SNR Estimators)/SNR Estimators.ipynb
@@ -17,7 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(\"rcv.data\", \"rb\")as f:\n",
+    "with open(\"rcv_6.data\", \"rb\")as f:\n",
     "    _ = f.read()\n",
     "\n",
     "rcv = np.frombuffer(_, dtype = np.uint8)"
@@ -49,7 +49,7 @@
     {
      "data": {
       "text/plain": [
-       "10"
+       "28"
       ]
      },
      "execution_count": 5,
@@ -75,29 +75,29 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([  0, 255,  40, 250,  37,  42, 186], dtype=uint8)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "tx_extended = np.tile(tx, int(rcv.shape[0]/len(tx)))"
+    "rcv[:7]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "np.sum(np.unpackbits(rcv) - np.unpackbits(tx_extended))"
+    "tx_extended = np.tile(tx, int(rcv.shape[0]/len(tx)))"
    ]
   },
   {
@@ -108,7 +108,7 @@
     {
      "data": {
       "text/plain": [
-       "0.0"
+       "5596992"
       ]
      },
      "execution_count": 9,
@@ -117,8 +117,35 @@
     }
    ],
    "source": [
-    "np.mean(np.unpackbits(rcv) - np.unpackbits(tx_extended))"
+    "np.sum(np.equal(np.unpackbits(rcv), np.unpackbits(tx_extended)))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0005371428571429027"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "1 - np.mean(np.equal(np.unpackbits(rcv), np.unpackbits(tx_extended)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
