--- a/examples/BPSK Ladams/27-06-2019 (BER Sem Diff)/Com Código/Get Coded SNR+BER.ipynb
+++ b/examples/BPSK Ladams/27-06-2019 (BER Sem Diff)/Com Código/Get Coded SNR+BER.ipynb
@@ -292,14 +292,14 @@
     "plt.style.use('ggplot')\n",
     "#plt.semilogy(EbN0_range, theory, \"g-.\", label = \"BPSK + Diff.Encoding Teórico\")\n",
     "plt.semilogy(EbN0_range, simu, \"b-o\", label = \"BPSK + Sem Diff.Encoding + BCH(15, 7) Simulado\")\n",
-    "plt.semilogy(np.array(snr_avgs) + 10 * math.log10(15/7), bers, \"o\", color = \"brown\", label = \"Prática LADAMS 27/06/2019 BCH(15, 7) BPSK\")\n",
+    "plt.semilogy(np.array(snr_avgs) + 10 * math.log10(15/7), bers, \"o\", color = \"darkred\", label = \"Prática LADAMS 27/06/2019 BCH(15, 7) BPSK\")\n",
     "plt.legend()\n",
     "plt.grid()\n",
     "\n",
     "plt.title('Simulação BER - BPSK + Sem Diff.Encoding')\n",
     "plt.xlabel('Eb/N0 (dB)')\n",
     "plt.ylabel('BER')\n",
-    "#plt.savefig(\"Curva.png\")"
+    "plt.savefig(\"Curva.png\", dpi = 300)"
    ]
   },
   {
