--- a/examples/BPSK Ladams/06-06-2019 (BER Coded Curves)/Get Coded SNR+BER.ipynb
+++ b/examples/BPSK Ladams/06-06-2019 (BER Coded Curves)/Get Coded SNR+BER.ipynb
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -403,7 +403,7 @@
     "plt.title(r'Simulação BER - DE-BPSK + BCH(15, 7, $t = 2$)')\n",
     "plt.xlabel(r'$E_b/N_0$ (dB)')\n",
     "plt.ylabel('BER')\n",
-    "plt.savefig(\"Curva.png\", dpi = 300)"
+    "plt.savefig(\"bpsk-coded.png\", dpi = 300)"
    ]
   },
   {
