--- a/examples/BPSK Ladams/27-06-2019 (BER Sem Diff)/ReadTxt.ipynb
+++ b/examples/BPSK Ladams/27-06-2019 (BER Sem Diff)/ReadTxt.ipynb
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -285,7 +285,7 @@
     "plt.title('Simulação BER - BPSK')\n",
     "plt.xlabel(r'$E_b/N_0$ (dB)')\n",
     "plt.ylabel('BER')\n",
-    "plt.savefig(\"Curva.png\", dpi = 300)"
+    "plt.savefig(\"bpsk.png\", dpi = 300)"
    ]
   },
   {
