--- a/examples/BPSK Ladams/30-05-2019 (BER Curves)/ReadTxt.ipynb
+++ b/examples/BPSK Ladams/30-05-2019 (BER Curves)/ReadTxt.ipynb
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -391,7 +391,7 @@
     "plt.title('Simulação BER - DE-BPSK')\n",
     "plt.xlabel(r'$E_b/N_0$ (dB)')\n",
     "plt.ylabel('BER')\n",
-    "plt.savefig(\"Curva.png\", dpi = 300)"
+    "plt.savefig(\"de-bpsk.png\", dpi = 300)"
    ]
   },
   {
