Fix: Markers BER Curves Plots.

--- a/examples/OOT/BER Teórico 2.ipynb
+++ b/examples/OOT/BER Teórico 2.ipynb
@@ -350,14 +350,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.semilogy(x_data, y_data_bpsk, label = \"Sem Código\")\n",
-    "plt.semilogy(x_data - 0 * 10 * math.log10(Hamming[1]/Hamming[0]), hamming_y, label = \"Hamming (7, 4)\")\n",
-    "# plt.semilogy(x_data, coded_63, label = f\"BCH {BCH_63}\")\n",
+    "plt.semilogy(x_data, y_data_bpsk, label = \"Sem Codificação\")\n",
+    "# plt.semilogy(x_data - 1 * 10 * math.log10(Hamming[1]/Hamming[0]), hamming_y, \"-.\", label = \"Hamming (7, 4)\")\n",
+    "\n",
+    "plt.semilogy(x_data, coded_15_2, \"-.\", label = f\"BCH {BCH_15_2}\")\n",
+    "plt.semilogy(x_data, coded_63, \"1\", label = f\"BCH {BCH_63}\")\n",
+    "\n",
     "plt.legend()\n",
     "plt.title(\"BER Teórico BPSK\")\n",
-    "plt.xlabel(\"Eb/N0 (dB)\")\n",
+    "plt.xlabel(r\"SNR (dB)\")\n",
     "plt.ylabel(\"BER\")\n",
     "plt.grid()\n",
+    "\n",
+    "# plt.savefig(f\"SNR.png\", dpi = 200)\n",
     "# plt.savefig(f\"BCHs.png\", dpi = 200)"
    ]
   },
@@ -389,5 +394,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
