Save BER Curves as .pdf.

--- a/examples/BPSK Ladams/27-06-2019 (BER Sem Diff)/ReadTxt.ipynb
+++ b/examples/BPSK Ladams/27-06-2019 (BER Sem Diff)/ReadTxt.ipynb
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -291,7 +291,7 @@
     "          r'BPSK')\n",
     "plt.xlabel(r'$E_b/N_0$ (dB)')\n",
     "plt.ylabel('BER')\n",
-    "plt.savefig(\"bpsk.png\", dpi = 300)"
+    "# plt.savefig(\"bpsk.pdf\", dpi = 300)"
    ]
   },
   {
