--- a/examples/BPSK Ladams/06-06-2019 (BER Coded Curves)/Get Coded SNR+BER.ipynb
+++ b/examples/BPSK Ladams/06-06-2019 (BER Coded Curves)/Get Coded SNR+BER.ipynb
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -405,7 +405,7 @@
     "          r'DE-BPSK + BCH(15, 7, $t = 2$)')\n",
     "plt.xlabel(r'$E_b/N_0$ (dB)')\n",
     "plt.ylabel('BER')\n",
-    "plt.savefig(\"bpsk-coded.png\", dpi = 300)"
+    "# plt.savefig(\"bpsk-coded.pdf\", dpi = 300)"
    ]
   },
   {
@@ -439,7 +439,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
