--- a/examples/BPSK Ladams/30-05-2019 (BER Curves)/ReadTxt.ipynb
+++ b/examples/BPSK Ladams/30-05-2019 (BER Curves)/ReadTxt.ipynb
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -374,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -405,7 +405,7 @@
     "          r'DE-BPSK')\n",
     "plt.xlabel(r'$E_b/N_0$ (dB)')\n",
     "plt.ylabel('BER')\n",
-    "plt.savefig(\"de-bpsk.png\", dpi = 300)"
+    "# plt.savefig(\"de-bpsk.pdf\", dpi = 300)"
    ]
   },
   {
